--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -5,8 +5,28 @@ a, a:link
 
 body
 	padding-top 60px
+	background #333
+	color #666
 
 table
 	tfoot, tbody
 		th
 			border-top 1px solid #DDD
+			
+.carousel-inner
+	img
+		max-width 100%
+		max-height 100%
+		
+#set-carousel
+	width 100%
+	max-height 660px
+	background #333
+	
+	
+.carousel-inner > .item
+	text-align: center
+
+.carousel-inner > .item > a > img
+	display: inline
+	line-height: 1
