--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -4,9 +4,28 @@ a, a:link
 	cursor pointer
 
 body
-	padding-top 60px
+	padding-top 50px
 	background #333
 	color #666
+	
+	
+.navbar, .navbar a, .navbar-inner
+	background-color rgb(33,33,33) !important
+	background-image none !important
+	border 0 !important
+	z-index: 1000  !important
+	// color #fff
+	//webkit-box-shadow: none !important
+	// -moz-box-shadow: none !important
+	// box-shadow: none !important
+	
+.navbar .brand, .navbar a, .navbar a:hover, .navbar a:focus
+	//color #fff !important
+	//text-shadow: 0 1px 0 #000  !important
+	
+.navbar a:hover
+	//color green !important
+	//text-shadow: 0 1px 0 #000  !important
 
 table
 	tfoot, tbody
@@ -20,13 +39,25 @@ table
 		
 #set-carousel
 	width 100%
-	max-height 660px
+	height 660px
 	background #333
+	text-align: center
 	
+#set-indicators
+	position: absolute
+	z-index: 100
+	left: 50%
+	bottom 0
+	padding-bottom 10px
+	
+.carousel-indicators
+	position: relative
+	left -50%
+	top 0
 	
 .carousel-inner > .item
-	text-align: center
+	text-align center
 
 .carousel-inner > .item > a > img
-	display: inline
-	line-height: 1
+	display inline
+	line-height 1
