--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -32,16 +32,33 @@ table
 		th
 			border-top 1px solid #DDD
 			
-.carousel-inner
-	img
-		max-width 100%
-		max-height 100%
-		
+			
 #set-carousel
 	width 100%
 	height 660px
 	background #333
 	text-align: center
+	
+.carousel-inner .item
+	text-align center
+	
+.carousel-inner
+	.item
+		img
+			display inline
+			line-height 1
+			max-width 100%
+			max-height 100%
+			min-height: 100%
+			background:url(/loader.gif) no-repeat center center
+		
+.carousel-inner
+	img.lazy
+		min-height: 100%
+		opacity 0.2
+		background:url(/loader.gif) no-repeat center center
+		
+
 	
 #set-indicators
 	position: absolute
@@ -55,9 +72,3 @@ table
 	left -50%
 	top 0
 	
-.carousel-inner > .item
-	text-align center
-
-.carousel-inner > .item > a > img
-	display inline
-	line-height 1
