--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -58,14 +58,11 @@ table
 		opacity 0.2
 		background:url(/loader.gif) no-repeat center center
 		
-
-	
 #set-indicators
 	position: absolute
 	z-index: 100
 	left: 50%
-	bottom 0
-	padding-bottom 10px
+	bottom -20px
 	
 .carousel-indicators
 	position: relative
