--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -4,68 +4,97 @@ a, a:link
 	cursor pointer
 
 body
-	padding-top 50px
-	background #333
-	color #666
+	background #111
+	color rgba(255, 255, 255, 0.6);
+
+#background, .background
+	position absolute
+	width 100%
+	height 100%
+	background: rgba(0, 0, 0, 0.95)
+	z-index 0
 	
+#background
+	background: url(http://pcdn.500px.net/29283085/093a45d64d31f7b8373dcdc34a7407f18a88b1f0/4.jpg) no-repeat center center;
+	background-size: cover;
+
+#container
+	position absolute
+	top 50px
+	bottom 0
+	left 0
+	right 0
 	
-.navbar, .navbar a, .navbar-inner
-	background-color rgb(33,33,33) !important
+.navbar
+	background-color rgba(33,33,33, 0.3)
+
+.navbar a, .navbar-inner
+	background-color rgba(33,33,33, 0.3) !important
 	background-image none !important
 	border 0 !important
 	z-index: 1000  !important
-	// color #fff
-	//webkit-box-shadow: none !important
-	// -moz-box-shadow: none !important
-	// box-shadow: none !important
-	
-.navbar .brand, .navbar a, .navbar a:hover, .navbar a:focus
-	//color #fff !important
-	//text-shadow: 0 1px 0 #000  !important
-	
+
+.navbar .brand
+.navbar a
 .navbar a:hover
-	//color green !important
-	//text-shadow: 0 1px 0 #000  !important
+.navbar a:focus
+.navbar a
+	background: none !important;
+	webkit-box-shadow: none !important
+	-moz-box-shadow: none !important
+	box-shadow: none !important
+
+footer
+	width 100%
+	padding 10px
 
 table
 	tfoot, tbody
 		th
 			border-top 1px solid #DDD
-			
-			
+
 #set-carousel
-	width 100%
 	height 660px
-	background #333
 	text-align: center
-	
-.carousel-inner .item
-	text-align center
-	
+
 .carousel-inner
 	.item
+		text-align center
 		img
 			display inline
 			line-height 1
 			max-width 100%
 			max-height 100%
-			min-height: 100%
 			background:url(/loader.gif) no-repeat center center
-		
-.carousel-inner
-	img.lazy
-		min-height: 100%
-		opacity 0.2
-		background:url(/loader.gif) no-repeat center center
-		
+		img.lazy
+			opacity 0.2
+			background:url(/loader.gif) no-repeat center center
+			height 100%
+		.shop
+			display none
+			background-color rgba(0,0,0, 0.8)
+			position absolute
+			width 100%
+			bottom 0
+			padding-bottom 10px
+			a
+				padding 0 5px
+				font-size small
+				color rgba(255, 255, 255, 0.2);
+	.item:hover
+		.shop
+			display block
+			a:hover
+				color rgba(255, 255, 255, 0.6);
+
 #set-indicators
-	position: absolute
-	z-index: 100
-	left: 50%
-	bottom -20px
-	
-.carousel-indicators
-	position: relative
-	left -50%
-	top 0
+	padding 0
+	margin-bottom: 20px
+	max-width: 100%
+	max-height: 70px
+	overflow: hidden
+	.carousel-indicators
+		position: relative
+		left -50%
+		top 0
 	
