Fixed loader image

--- a/src/documents/styles/style.css.styl
+++ b/src/documents/styles/style.css.styl
@@ -65,10 +65,10 @@ table
 			line-height 1
 			max-width 100%
 			max-height 100%
-			background:url(/loader.gif) no-repeat center center
+			background:url(../loader.gif) no-repeat center center
 		img.lazy
 			opacity 0.2
-			background:url(/loader.gif) no-repeat center center
+			background:url(../loader.gif) no-repeat center center
 			height 100%
 		.shop
 			display none
@@ -97,4 +97,8 @@ table
 		position: relative
 		left -50%
 		top 0
+	img
+		opacity 0.5
+	img:hover
+			opacity 1
 	
